# spotify_track_manager

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.mjs  main.py  package.json  pnpm-lock.yaml  pyproject.toml  spotify_client.py  tsconfig.base.json  utils.py
.agents/skills/run-spotify-track-manager/: SKILL.md
.claude/skills/run-spotify-track-manager/: SKILL.md  driver.py
apps/backend/: package.json
apps/backend/scripts/: fetch-model.mjs
apps/backend/src/domain/: canonical.test.ts  canonical.ts  cleanup.test.ts  cleanup.ts  crosslang.test.ts  crosslang.ts  dedupe.test.ts  dedupe.ts  detect.test.ts  detect.ts  fixtures.ts  shared-contract.test.ts  (+2 more)
apps/desktop/: electron-builder.yml  package.json
apps/desktop/scripts/: stage.mjs
apps/desktop/src/: auth.ts  backend.ts  main.ts  preload.ts
apps/frontend/: index.html  mock-server.mjs  package.json  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css  main.tsx
docs/superpowers/plans/: 2026-06-16-oauth-pkce-migration.md  2026-07-03-cleanup-groups-and-playable-replacements.md
docs/superpowers/specs/: 2026-06-05-stm-serve-interactive-web-design.md  2026-07-03-cleanup-groups-and-playable-replacements-design.md
src/stm/: cli.py  client.py  config.py  dedupe.py  detect.py  fetch.py  history.py  models.py  playcount.py  server.py  webpage.py  writers.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_dedupe.py  test_detect.py  test_fetch.py  test_history.py  test_models.py  test_playcount.py  test_server.py  test_webpage.py  test_writers.py
(+44 files in other folders)
