[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-track-manager"
version = "0.2.0"
description = "掃描並清理 Spotify 收藏中的重複與失效歌曲"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spotipy>=2.23,<3",
    "pydantic-settings>=2.2,<3",
    "typer>=0.12,<1",
    "rich>=13.7,<14",
    "rapidfuzz>=3.6,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "ruff>=0.4,<1",
]

[project.scripts]
stm = "stm.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
